# RuralHealthLink

./: app.py  pyproject.toml  run_app.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Navigation.tsx  ThemeProvider.tsx
client/src/lib/: auth.ts  auth.tsx
client/src/pages/: About.tsx  AdminDashboard.tsx  AdminLogin.tsx  Contact.tsx  Home.tsx  Login.tsx  Register.tsx  UserDashboard.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
static/: app.js  index.html
